--- a/html/course_page.css
+++ b/html/course_page.css
@@ -140,6 +140,8 @@ body h3 {
     background: #160053;
     display: flex;
     align-items: center;
+    top: -2px;
+    left: -3px;
     justify-content: space-between;
     color: #fff;
     width: 300px;
@@ -149,6 +151,7 @@ body h3 {
     border-radius: 4px;
     height: 70px;
 }
+
 
 .select fa-caret-down {
     width: 15px;
